src/components/founder/founder.component.scss
/* ... */
@media screen and (max-width: 767px) {
  .pageBannerOuter {
    padding-top: 80px !important;

    .founderTitle {
      font-size: 58px;
      line-height: 1;
      text-align: left;
    }

    .founder-container {
      height: auto;
    }

    .founder-field-container > div {
      display: flex;
      flex-direction: column;
      justify-content: flex-start;
      text-align: left;
    }

    span.tagBorderRight {
      margin: 0px;
      border: none;
      padding: 0px;
    }

    span.tagBorderRight {
      content: '';
      width: 35px;
      height: 2px;
      background-color: #fff;
      display: block;
      margin: 3px 0px;
    }

    .blogSliderOuter {
      .slick-track .slick-slide > div {
        padding-right: 25px;
      }
    }
  }

  .blogSliderOuter {
    &.contentItemOuter-w50 {
      padding: 18px 0px 10px 15px;
      margin-top: 10px;
    }

    .slick-dots li button:before {
      line-height: 14px;
      width: 14px;
      height: 14px;
      font-size: 10px;
    }

    ul.slick-dots {
      bottom: auto !important;
      top: 0px !important;
      position: relative;
      text-align: left;
      right: auto;
    }

    .slick-dots li,
    .slick-dots li button {
      width: 14px;
      height: 14px;
    }

    .slick-track .slick-slide.slick-active {
      opacity: 1;
    }

    .slick-track .slick-slide {
      opacity: 0.3;
    }

    .content-item-desc button {
      font-size: 15px;
      line-height: 1;
      height: auto;
      margin: 0px;
    }

    .contentButtonWrap {
      display: flex;
      align-items: center;
      margin-top: 12px !important;
    }

    .contentItemOuter-w85 .slick-track .slick-slide > div {
      padding-right: 25px;
    }

    .slick-list .slick-track .slick-slide > div > div .content-item-desc {
      bottom: 0px !important;
      right: -110px !important;
      left: auto !important;
      position: relative;
      width: calc(100% - 110px);
      display: flex;
      flex-direction: column;
      margin-top: 34px;
    }
    .itemCoverImage {
      position: absolute;
      width: 160px;
      height: 130px;
    }

    .contentItemOuter-w85 {
      padding: 18px 0px 10px 15px;
    }

    .contentItemOuter-w85 .slick-slide .content-item-desc > * {
      margin: 0px;
    }

    .read_duration {
      position: absolute;
      top: 12px;
    }

    .content-item-desc h5 {
      padding-top: 16px !important;
      font-size: 16px;
      line-height: 1.2;
      padding-bottom: 8px;
    }

    .content-item-desc h5 {
      overflow: hidden;
      text-overflow: ellipsis;
      display: -webkit-box;
      -webkit-line-clamp: 2;
      -webkit-box-orient: vertical;
    }

    img.contentItemImage {
      position: absolute;
    }

    .contentItemHeader {
      font-size: 18px;
      font-weight: 600;
      padding-bottom: 5px;
    }

    .hospatalitySector {
      bottom: 275px;
    }

    .contentCategoryBox {
      bottom: auto !important;
      top: 0px;
    }
  }
}

@media screen and (max-width: 480px) {
  .pageBannerOuter {
    .founderTitle {
      font-size: 52px;
    }

    .heroSlider01-thumbnailText {
      font-size: 17px;
      line-height: 1.2;
    }

    .founderSection-leftOuter.founder-container {
      max-width: 100%;
      width: 100%;
    }

    .founderTitleSliderBox > div:first-child {
      padding-right: 10px !important;
    }

    .founderTitleSliderBox > div:last-child {
      display: none !important;
    }
  }

  .founderTitleSliderBox .thumbnailIndex {
    flex: 0 auto;
    font-size: 15px;
    padding-right: 5px;
    line-height: 18px;
  }
}

@media screen and (max-width: 375px) {
  .pageBannerOuter .founder-container {
    flex: 0 100%;
  }

  .founder-footer-container {
    padding-right: 15px;
  }

  .founder-background {
    width: 95%;
  }
}

